--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@microsoft/clarity": "^1.0.2",
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
